--- a/src/main/resources/templates/admin/candidates/candidate.html
+++ b/src/main/resources/templates/admin/candidates/candidate.html
@@ -3,7 +3,7 @@
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{admin/layout.html}" >
+      layout:decorate="~{/admin/layout.html}" >
 
 <head>
     <meta charset="utf-8">
@@ -47,119 +47,116 @@
 </head>
 
 <body>
-<div class="wrapper">
-
-
-        <!-- PHẦN CONTENT -->
-    <main class="content" layout:fragment="content">
-            <h1 class="h3 mb-3"><strong>Candidate</strong></h1>
-            <!-- Form nhập -->
-<!--            <div class="row mt-4">-->
-<!--                <div class="col-12 col-lg-12 col-xxl-12">-->
-<!--                    <div class="card flex-fill">-->
-<!--                        <div class="card-header">-->
-<!--                            <h5 class="card-title mb-0">Add New Candidate</h5>-->
-<!--                        </div>-->
-<!--                        <div class="card-body">-->
-<!--                            <form>-->
-<!--                                <div class="mb-3">-->
-<!--                                    <label for="candidateName" class="form-label">Name</label>-->
-<!--                                    <input type="text" class="form-control" id="candidateName" placeholder="Enter Candidate Name" required>-->
-<!--                                </div>-->
-<!--                                <div class="mb-3">-->
-<!--                                    <label for="candidatePhone" class="form-label">Phone</label>-->
-<!--                                    <input type="text" class="form-control" id="candidatePhone" placeholder="Enter Phone Number" required>-->
-<!--                                </div>-->
-<!--                                <div class="mb-3">-->
-<!--                                    <label for="candidateAddress" class="form-label">Address</label>-->
-<!--                                    <input type="text" class="form-control" id="candidateAddress" placeholder="Enter Address" required>-->
-<!--                                </div>-->
-<!--                                <div class="mb-3">-->
-<!--                                    <label for="candidateSex" class="form-label">Sex</label>-->
-<!--                                    <select class="form-select" id="candidateSex" required>-->
-<!--                                        <option value="">Select Sex</option>-->
-<!--                                        <option value="Male">Male</option>-->
-<!--                                        <option value="Female">Female</option>-->
-<!--                                        <option value="Other">Other</option>-->
-<!--                                    </select>-->
-<!--                                </div>-->
-<!--                                <div class="mb-3">-->
-<!--                                    <label for="candidateDob" class="form-label">Date of Birth</label>-->
-<!--                                    <input type="date" class="form-control" id="candidateDob" required>-->
-<!--                                </div>-->
-<!--                                <div class="mb-3">-->
-<!--                                    <label for="candidateImage" class="form-label">Upload Image</label>-->
-<!--                                    <input type="file" class="form-control" id="candidateImage">-->
-<!--                                </div>-->
-<!--                                <button type="submit" class="btn btn-primary">Submit</button>-->
-<!--                            </form>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
 
 
 
-            <!-- Table -->
-            <div class="row">
+<!-- PHẦN CONTENT -->
+<main class="content" layout:fragment="content">
+    <h1 class="h3 mb-3"><strong>Candidate</strong></h1>
+    <!-- Form nhập -->
+    <!--            <div class="row mt-4">-->
+    <!--                <div class="col-12 col-lg-12 col-xxl-12">-->
+    <!--                    <div class="card flex-fill">-->
+    <!--                        <div class="card-header">-->
+    <!--                            <h5 class="card-title mb-0">Add New Candidate</h5>-->
+    <!--                        </div>-->
+    <!--                        <div class="card-body">-->
+    <!--                            <form>-->
+    <!--                                <div class="mb-3">-->
+    <!--                                    <label for="candidateName" class="form-label">Name</label>-->
+    <!--                                    <input type="text" class="form-control" id="candidateName" placeholder="Enter Candidate Name" required>-->
+    <!--                                </div>-->
+    <!--                                <div class="mb-3">-->
+    <!--                                    <label for="candidatePhone" class="form-label">Phone</label>-->
+    <!--                                    <input type="text" class="form-control" id="candidatePhone" placeholder="Enter Phone Number" required>-->
+    <!--                                </div>-->
+    <!--                                <div class="mb-3">-->
+    <!--                                    <label for="candidateAddress" class="form-label">Address</label>-->
+    <!--                                    <input type="text" class="form-control" id="candidateAddress" placeholder="Enter Address" required>-->
+    <!--                                </div>-->
+    <!--                                <div class="mb-3">-->
+    <!--                                    <label for="candidateSex" class="form-label">Sex</label>-->
+    <!--                                    <select class="form-select" id="candidateSex" required>-->
+    <!--                                        <option value="">Select Sex</option>-->
+    <!--                                        <option value="Male">Male</option>-->
+    <!--                                        <option value="Female">Female</option>-->
+    <!--                                        <option value="Other">Other</option>-->
+    <!--                                    </select>-->
+    <!--                                </div>-->
+    <!--                                <div class="mb-3">-->
+    <!--                                    <label for="candidateDob" class="form-label">Date of Birth</label>-->
+    <!--                                    <input type="date" class="form-control" id="candidateDob" required>-->
+    <!--                                </div>-->
+    <!--                                <div class="mb-3">-->
+    <!--                                    <label for="candidateImage" class="form-label">Upload Image</label>-->
+    <!--                                    <input type="file" class="form-control" id="candidateImage">-->
+    <!--                                </div>-->
+    <!--                                <button type="submit" class="btn btn-primary">Submit</button>-->
+    <!--                            </form>-->
+    <!--                        </div>-->
+    <!--                    </div>-->
+    <!--                </div>-->
+    <!--            </div>-->
 
-                <div class="col-12 col-lg-12 col-xxl-12 ">
-                    <div class="card flex-fill">
-                        <div class="card-header">
-
-                            <h5 class="card-title mb-0">Candidate</h5>
-                        </div>
-                        <table class="table table-hover my-0">
-                            <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Họ và tên</th>
-                                <th>Email</th>
-                                <th>Số điện thoại</th>
-                                <th>Địa chỉ</th>
-                                <th>Giới tính</th>
-                                <th>Ngày sinh</th>
-                                <th>Actions</th> <!-- Thêm cột mới cho các nút -->
-
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="candidate : ${candidates}">
-                                <td th:text="${candidate.id}"></td>
-                                <td th:text="${candidate.name}"></td>
-                                <td th:text="${candidate.email}"></td>
-                                <td th:text="${candidate.phone}"></td>
-                                <td th:text="${candidate.address}"></td>
-                                <td th:text="${candidate.sex}"></td>
-                                <td th:text="${candidate.dateOfBirth}"></td>
-                                <td>
-                                    <a th:href="@{'/admin/candidates/delete/' + ${candidate.id}}"
-                                       class="btn btn-outline-danger btn-sm rounded-circle"
-                                       style="width: 40px; height: 40px;"
-                                       onclick="return confirm('Bạn có chắc chắn muốn xóa công ty này?');">
-                                        <i class="align-middle" data-feather="lock"></i>
-                                    </a>
-                                </td>
-                                <td>
-                                    <a th:href="@{' ' + ${candidate.id}}"
-                                       class="btn btn-outline-warning btn-sm rounded-circle"
-                                       style="width: 40px; height: 40px;">
-                                        <i class="align-middle" data-feather="eye"></i>
-                                    </a>
-                                </td>
-                            </tr>
 
 
-                            </tbody>
-                        </table>
-                    </div>
+    <!-- Table -->
+    <div class="row">
 
+        <div class="col-12 col-lg-12 col-xxl-12 ">
+            <div class="card flex-fill">
+                <div class="card-header">
+
+                    <h5 class="card-title mb-0">Candidate</h5>
                 </div>
+                <table class="table table-hover my-0">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Họ và tên</th>
+                        <th>Email</th>
+                        <th>Số điện thoại</th>
+                        <th>Địa chỉ</th>
+                        <th>Giới tính</th>
+                        <th>Ngày sinh</th>
+                        <th>Actions</th> <!-- Thêm cột mới cho các nút -->
 
-    </main>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="candidate : ${candidates}">
+                        <td th:text="${candidate.id}"></td>
+                        <td th:text="${candidate.name}"></td>
+                        <td th:text="${candidate.email}"></td>
+                        <td th:text="${candidate.phone}"></td>
+                        <td th:text="${candidate.address}"></td>
+                        <td th:text="${candidate.sex}"></td>
+                        <td th:text="${candidate.dateOfBirth}"></td>
+                        <td>
+                            <a th:href="@{'/admin/candidates/delete/' + ${candidate.id}}"
+                               class="btn btn-outline-danger btn-sm rounded-circle"
+                               style="width: 40px; height: 40px;"
+                               onclick="return confirm('Bạn có chắc chắn muốn xóa công ty này?');">
+                                <i class="align-middle" data-feather="lock"></i>
+                            </a>
+                        </td>
+                        <td>
+                            <a th:href="@{' ' + ${candidate.id}}"
+                               class="btn btn-outline-warning btn-sm rounded-circle"
+                               style="width: 40px; height: 40px;">
+                                <i class="align-middle" data-feather="eye"></i>
+                            </a>
+                        </td>
+                    </tr>
 
 
-</div>
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+    </div>
+</main>
 
 
 
