--- a/src/main/resources/templates/admin/categories/category.html
+++ b/src/main/resources/templates/admin/categories/category.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{admin/layout.html}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{/admin/layout.html}">
 
 <head>
     <meta charset="utf-8">
@@ -68,59 +68,57 @@
 </head>
 
 <body>
-<div class="wrapper">
 
 
 
 
-        <!-- PHẦN CONTENT -->
-        <main class="content" layout:fragment="content">
-            <div class="row">
-                <h1 class="h3 mb-3"><strong>Category Job</strong></h1>
-                <div class="d-flex">
-                    <div class="card flex-fill" style="border: 2px solid #029393; border-radius: 9px;">
-                        <div class="card-header">
-                            <h5 class="card-title mb-0">Add Category Job</h5>
-                            <!-- Form để thêm JobCategory -->
-                            <form th:action="@{/admin/categories/add}" method="post" class="d-flex mt-2">
-                                <input type="text" class="form-control" name="categoryName" placeholder="Input" required>
-                                <button type="submit" class="btn btn-outline-primary btn-sm rounded-3 ms-2" style="width: 40px; height: 40px;">
-                                    <i class="align-middle" data-feather="plus-circle"></i>
-                                </button>
-                            </form>
-                            <!-- Hiển thị thông báo lỗi nếu có -->
-                            <div th:if="${error}" class="alert alert-danger mt-2" th:text="${error}"></div>
-                        </div>
 
-                        <table class="table table-hover mt-3 my-0">
-                            <thead>
-                            <tr>
-                                <th class="d-none d-xl-table-cell">ID</th>
-                                <th>Category Name</th>
-                                <th>Actions</th>
-                            </tr>
-                            </thead>
-                            <tbody id="categoryTableBody">
-                            <tr th:each="category : ${categories}">
-                                <td scope="row" th:text="${category.id}">1</td> <!-- Hiển thị ID -->
-                                <td th:text="${category.categoryName}">Category Name</td> <!-- Hiển thị Tên -->
-                                <td>
-
-                                    <a th:href="@{'/admin/categories/delete/' + ${category.id}}" class="btn btn-outline-danger btn-sm rounded-circle"
-                                       style="width: 30px; height: 30px;">
-                                        <i class="align-middle" data-feather="trash"></i>
-                                    </a>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
+<!-- PHẦN CONTENT -->
+<main class="content" layout:fragment="content">
+    <div class="row">
+        <h1 class="h3 mb-3"><strong>Category Job</strong></h1>
+        <div class="d-flex">
+            <div class="card flex-fill" style="border: 2px solid #029393; border-radius: 9px;">
+                <div class="card-header">
+                    <h5 class="card-title mb-0">Add Category Job</h5>
+                    <!-- Form để thêm JobCategory -->
+                    <form th:action="@{/admin/categories/add}" method="post" class="d-flex mt-2">
+                        <input type="text" class="form-control" name="categoryName" placeholder="Input" required>
+                        <button type="submit" class="btn btn-outline-primary btn-sm rounded-3 ms-2" style="width: 40px; height: 40px;">
+                            <i class="align-middle" data-feather="plus-circle"></i>
+                        </button>
+                    </form>
+                    <!-- Hiển thị thông báo lỗi nếu có -->
+                    <div th:if="${error}" class="alert alert-danger mt-2" th:text="${error}"></div>
                 </div>
+
+                <table class="table table-hover mt-3 my-0">
+                    <thead>
+                    <tr>
+                        <th class="d-none d-xl-table-cell">ID</th>
+                        <th>Category Name</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody id="categoryTableBody">
+                    <tr th:each="category : ${categories}">
+                        <td scope="row" th:text="${category.id}">1</td> <!-- Hiển thị ID -->
+                        <td th:text="${category.categoryName}">Category Name</td> <!-- Hiển thị Tên -->
+                        <td>
+
+                            <a th:href="@{'/admin/categories/delete/' + ${category.id}}" class="btn btn-outline-danger btn-sm rounded-circle"
+                               style="width: 30px; height: 30px;">
+                                <i class="align-middle" data-feather="trash"></i>
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
-        </main>
-
-
+        </div>
     </div>
+</main>
+
 
 
 <script src="/js/app.js"></script>
