--- a/src/main/resources/templates/admin/profiles/profile.html
+++ b/src/main/resources/templates/admin/profiles/profile.html
@@ -3,7 +3,7 @@
 
 
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{admin/layout.html}">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{/admin/layout.html}">
 
 <head>
     <meta charset="utf-8">
@@ -47,89 +47,88 @@
 </head>
 
 <body>
-<div class="wrapper">
 
 
-        <!-- PHẦN CONTENT -->
-        <main class="content" layout:fragment="content">
-            <div class="container-fluid p-0" >
 
-                <!-- Profile Body -->
-                <div class="row d-flex profile-body p-4 border rounded shadow-sm">
-                    <h1 class="h3 mb-3"><strong>Profile </strong></h1>
+<!-- PHẦN CONTENT -->
+<main class="content" layout:fragment="content">
+    <div class="container-fluid p-0" >
 
-                    <!-- Profile Information -->
-                    <div class="col-md-12">
-                        <!-- Name Fields -->
-                        <div class="row mb-3">
-                            <div class="col-md-6">
-                                <label for="firstName" class="form-label">UserName</label>
-                                <input type="text" class="form-control" id="firstName" value="tienlake">
-                            </div>
-                            <div class="col-md-6">
-                                <label  class="form-label">Password</label>
-                                <input type="password" class="form-control" id="lastName" value="lake3">
-                            </div>
-                        </div>
+        <!-- Profile Body -->
+        <div class="row d-flex profile-body p-4 border rounded shadow-sm">
+            <h1 class="h3 mb-3"><strong>Profile </strong></h1>
 
-                        <!-- Email and Phone Fields -->
-                        <div class="row mb-3">
-                            <div class="col-md-6">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="email" value="honhutuyen201092004@outlook.com">
-                            </div>
-                            <div class="col-md-6 ">
-                                <label for="role" class="form-label">Role</label>
-                                <input type="text" class="form-control" id="role" value="Admin" readonly>
-                            </div>
-                        </div>
-
-                        <!-- About Me Section -->
-                        <div class="mb-4">
-                            <label for="aboutMe" class="form-label">About Me</label>
-                            <textarea class="form-control" id="aboutMe" rows="4" placeholder="Type something..."></textarea>
-                        </div>
-
-                        <!-- Save Changes Button -->
-                        <div class="text-end">
-                            <button class="btn btn-success">Save Changes</button>
-                        </div>
+            <!-- Profile Information -->
+            <div class="col-md-12">
+                <!-- Name Fields -->
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <label for="firstName" class="form-label">UserName</label>
+                        <input type="text" class="form-control" id="firstName" value="tienlake">
+                    </div>
+                    <div class="col-md-6">
+                        <label  class="form-label">Password</label>
+                        <input type="password" class="form-control" id="lastName" value="lake3">
                     </div>
                 </div>
 
-
-
-
-                <div class="row d-flex mt-2 profile-body p-4 border rounded shadow-sm">
-                    <h1 class="h3 mb-3"><strong>Change Password </strong></h1>
-
-
-                    <div class="col-md-12">
-
-                        <div class="row mb-3">
-                            <div class="col-md-6">
-                                <label  class="form-label">Current Password</label>
-                                <input type="password" class="form-control"  value="tienlake">
-                            </div>
-                            <div class="col-md-6 ">
-                                <label  class="form-label">New Password</label>
-                                <input type="password" class="form-control"  value="lake3">
-                            </div>
-                        </div>
-
-
-
-                        <!-- Save Changes Button -->
-                        <div class="text-end">
-                            <button class="btn btn-success">Save Changes</button>
-                        </div>
+                <!-- Email and Phone Fields -->
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" value="honhutuyen201092004@outlook.com">
                     </div>
+                    <div class="col-md-6 ">
+                        <label for="role" class="form-label">Role</label>
+                        <input type="text" class="form-control" id="role" value="Admin" readonly>
+                    </div>
+                </div>
+
+                <!-- About Me Section -->
+                <div class="mb-4">
+                    <label for="aboutMe" class="form-label">About Me</label>
+                    <textarea class="form-control" id="aboutMe" rows="4" placeholder="Type something..."></textarea>
+                </div>
+
+                <!-- Save Changes Button -->
+                <div class="text-end">
+                    <button class="btn btn-success">Save Changes</button>
                 </div>
             </div>
-        </main>
+        </div>
 
 
-</div>
+
+
+        <div class="row d-flex mt-2 profile-body p-4 border rounded shadow-sm">
+            <h1 class="h3 mb-3"><strong>Change Password </strong></h1>
+
+
+            <div class="col-md-12">
+
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <label  class="form-label">Current Password</label>
+                        <input type="password" class="form-control"  value="tienlake">
+                    </div>
+                    <div class="col-md-6 ">
+                        <label  class="form-label">New Password</label>
+                        <input type="password" class="form-control"  value="lake3">
+                    </div>
+                </div>
+
+
+
+                <!-- Save Changes Button -->
+                <div class="text-end">
+                    <button class="btn btn-success">Save Changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+
 
 
 <script src="/js/app.js"></script>
